// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
<input
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-0 form-control"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders block 1`] = `
<input
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-0 form-control input-block"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders large 1`] = `
<input
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-0 form-control input-lg"
  name="zipcode"
  type="text"
/>
`;

exports[`TextInput renders small 1`] = `
<input
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-0 form-control input-sm"
  name="zipcode"
  type="text"
/>
`;
